force-app/main/default/objects/AR_Injection_Archival__c/AR_Injection_Archival__c.object-meta.xml
<CustomObject>
    <label>AR Injection Status Archival</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Injection Status Archivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>