force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Age_by_DOS__c.field-meta.xml
<CustomField>
    <fullName>AR_Age_by_DOS__c</fullName>
    <label>Age by DOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>