force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Assignment__c.field-meta.xml
<CustomField>
    <fullName>AR_Assignment__c</fullName>
    <label>Re-Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>