force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Charge_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Charge_Status__c</fullName>
    <label>Charge Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>