force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_DOS__c.field-meta.xml
<CustomField>
    <fullName>AR_DOS__c</fullName>
    <label>DOS</label>
    <type>Date</type>
</CustomField>