force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Entered_Date__c</fullName>
    <label>Entered Date</label>
    <type>Date</type>
</CustomField>