force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Metadata_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>AR_Metadata_Time_Stamp__c</fullName>
    <label>Metadata Time Stamp</label>
    <type>DateTime</type>
</CustomField>