force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR Injection Status Archivals</relationshipLabel>
    <relationshipName>AR_Injection_Status_Archivals</relationshipName>
    <type>Lookup</type>
</CustomField>