force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Patient_Payments__c.field-meta.xml
<CustomField>
    <fullName>AR_Patient_Payments__c</fullName>
    <label>Patient Payments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>