force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Payer__c.field-meta.xml
<CustomField>
    <fullName>AR_Payer__c</fullName>
    <label>Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>