force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Payment_Variance__c.field-meta.xml
<CustomField>
    <fullName>AR_Payment_Variance__c</fullName>
    <label>Payment [Variance]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>