force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Priority_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Priority_Status__c</fullName>
    <label>Priority Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>