force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Procedure_Code__c</fullName>
    <label>Procedure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>