force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Procedure_Description__c.field-meta.xml
<CustomField>
    <fullName>AR_Procedure_Description__c</fullName>
    <label>Procedure Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>