force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Responsibile_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Responsibile_Party_Name__c</fullName>
    <label>Responsibile Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>