force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Un_Applied__c.field-meta.xml
<CustomField>
    <fullName>AR_Un_Applied__c</fullName>
    <label>Un-Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>