force-app/main/default/objects/AR_Injection_Archival__c/fields/AR_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>