force-app/main/default/objects/AR_Injection_Archival__c/fields/Injection_Status__c.field-meta.xml
<CustomField>
    <fullName>Injection_Status__c</fullName>
    <label>Injection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>